vlib/v/checker/tests/cast_string_with_byte_err.vv
for by in 'abc' {
	println(string(by))
}
